# modular-robot

./: .gitignore  analyze_trajectory.py  plot_arc_trajectory.py  plot_trajectory.py  zeroerr_ros2_env.sh
src/: erobot_urdf_description
src/erobot_isaac_hardware/: CMakeLists.txt  erobot_isaac_hardware.xml  package.xml
src/erobot_isaac_hardware/config/: controllers_isaac.yaml  controllers_isaac.yaml.bak_before_controller_fix
src/erobot_isaac_hardware/include/erobot_isaac_hardware/: isaac_sim_system.hpp
src/erobot_isaac_hardware/launch/: isaac_6dof.launch.py  isaac_6dof.launch.py.bak_before_params_file_fix
src/erobot_isaac_hardware/src/: isaac_sim_system.cpp
src/erobot_motion_client/: package.xml  setup.cfg  setup.py
src/erobot_motion_client/erobot_motion_client/: arc_interpolation_client.py  arc_interpolation_client.py.bak_speed_20260714_142946  ee_pose_goal.py  linear_interpolation_client.py  linear_interpolation_client.py.bak_speed_20260714_142946  ptp_joint_client.py  ptp_joint_client.py.bak_speed_20260714_142946  torque_monitor.py
src/erobot_motion_client/launch/: arc_interpolation_client.launch.py  arc_interpolation_client.launch.py.bak_speed_20260714_142946  ee_pose_goal.launch.py  ee_pose_goal.launch.py.bak_speed_20260714_142946  linear_interpolation_client.launch.py  linear_interpolation_client.launch.py.bak_speed_20260714_142946
src/erobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/erobot_moveit_config/config/: erobot_urdf.SLDASM.ros2_control.xacro  erobot_urdf.SLDASM.srdf  erobot_urdf.SLDASM.urdf.xacro  initial_positions.yaml  joint_limits.yaml  joint_limits.yaml.bak_speed_20260714_142946  moveit_controllers.yaml  ompl_planning.yaml  robot_real.urdf  robot_real.urdf.bak_speed_20260714_142946  ros2_controllers.yaml
src/erobot_moveit_config/launch/: real_moveit.launch.py  real_moveit.launch.py.bak
src/zeroerr_ethercat_hardware/: CMakeLists.txt  CMakeLists.txt.bak  package.xml  package.xml.bak  zeroerr_hardware.xml
src/zeroerr_ethercat_hardware/config/reference/: csp_hold_test.cpp  csp_hold_test_tail.cpp  ethercat_slaves.txt  slave5_cstruct.txt
src/zeroerr_ethercat_hardware/include/zeroerr_ethercat_hardware/: zeroerr_system.hpp
src/zeroerr_ethercat_hardware/launch/: single_joint_test.launch.py  single_joint_test.launch.py.bak
src/zeroerr_ethercat_hardware/src/: zeroerr_system.cpp
src/zeroerr_ethercat_hardware_6dof/: CMakeLists.txt  package.xml  zeroerr_hardware.xml
src/zeroerr_ethercat_hardware_6dof/config/: controllers.yaml  controllers_6dof.yaml
src/zeroerr_ethercat_hardware_6dof/config/reference/: slave5_pdos.txt  slave5_sdos.txt
src/zeroerr_ethercat_hardware_6dof/include/zeroerr_ethercat_hardware_6dof/: zeroerr_system.hpp
src/zeroerr_ethercat_hardware_6dof/launch/: real_6dof.launch.py  real_6dof.launch.py.bak_before_time_source  real_6dof_debug.launch.py  single_joint_test.launch.py
src/zeroerr_ethercat_hardware_6dof/src/: zeroerr_system.cpp  zeroerr_system_before_nonblocking_20260702_164721.cpp
src/zeroerr_ethercat_hardware_6dof/urdf/: single_joint_test.urdf.xacro
