<?xml version="1.0"?>

<package format="3">

  <name>zeroerr_ethercat_hardware</name>
  <version>0.0.1</version>

  <description>
    ros2_control hardware interface for ZeroErr EtherCAT joints
    using the EtherLab master.
  </description>

  <maintainer email="hust@example.com">hust</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <!-- 后续启动控制器和URDF时使用 -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>


  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
